<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F8FC"
    android:orientation="vertical">

    <FrameLayout
        style="@style/AccountTitleBarStyle"
        android:paddingStart="7dp"
        android:paddingEnd="12dp">

        <ImageView
            style="@style/AccountImageButtonStyle"
            android:id="@+id/password_title_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back_circle"/>

        <TextView
            android:id="@+id/password_title"
            android:textAppearance="@style/AccountTextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/account_transaction_password_title"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/card_margin"
        android:layout_marginEnd="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        android:orientation="vertical"
        android:background="@drawable/bg_card">

        <TextView
            android:id="@+id/password_infor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/account_transaction_input_password"
            android:textAppearance="@style/AccountTextStyle.Primary"
            android:textColor="@color/account_text_secondary"
            android:layout_marginTop="@dimen/dimen_28"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="@dimen/dimen_24"
            android:background="@color/divider"/>

        <com.tik.android.component.widget.VerificationCodeInput
            android:id="@+id/password_input_code"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/super_title"
            app:code_length="6"
            app:is_password="true"
            android:layout_marginTop="@dimen/dimen_24"
            android:layout_marginBottom="@dimen/dimen_28"/>

    </LinearLayout>


    <TextView
        android:id="@+id/password_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16"
        android:layout_marginTop="4dp"
        android:textColor="@color/text_color_highlight"
        android:text="@string/account_transaction_forget_password_"
        android:layout_gravity="end"/>



    <TextView
        android:id="@+id/password_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/account_margin_large"
        android:textAppearance="@style/AccountTextStyle.Primary.Inverse"
        android:background="@drawable/bg_round_rect_highlight"
        android:layout_marginLeft="@dimen/dimen_12"
        android:layout_marginRight="@dimen/dimen_12"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/account_binding_dialog_ok" />

</LinearLayout>