<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <FrameLayout style="@style/AccountTitleBarStyle">
        
        <ImageView
            style="@style/TitleClickableImageStyle"
            android:id="@+id/title_btn_left"
            android:src="@drawable/icon_close_circle"/>

    </FrameLayout>
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/account_margin_general"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/intro_stage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:background="@drawable/bg_card"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_14"
                android:layout_marginBottom="@dimen/dimen_10"
                android:src="@drawable/ic_logo_hox"/>

            <TextView
                android:textAppearance="@style/AccountTextStyle.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:text="@string/account_intro_hox_title"/>

            <include layout="@layout/account_divider"/>

            <!--留左右下的边距是为了不遮挡背景的边线-->
            <TextView
                android:textAppearance="@style/AccountTextStyle.Little.Deactive"
                android:layout_width="match_parent"
                android:layout_marginStart="0.33dp"
                android:layout_marginEnd="0.33dp"
                android:layout_marginBottom="0.33dp"
                android:layout_height="@dimen/button_height"
                android:gravity="center"
                android:text="@string/account_intro_hox_advantage"
                android:textColor="#CCAEB2C2"
                android:background="@drawable/account_bg_intro_bottom_round_rect"/>
        </LinearLayout>

        <TextView
            android:textAppearance="@style/AccountTextStyle.Primary.Inverse"
            android:id="@+id/intro_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/account_button_height"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_round_rect_highlight"
            android:gravity="center"
            android:text="@string/account_intro_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intro_stage" />

        <TextView
            android:textAppearance="@style/AccountTextStyle.Primary.Highlight"
            android:id="@+id/intro_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/account_button_height"
            android:layout_marginTop="@dimen/account_margin_general"
            android:background="@drawable/bg_round_rect"
            android:gravity="center"
            android:text="@string/account_intro_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_register" />

        <include layout="@layout/account_login_by_third"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>
